--- a/preset_test.html
+++ b/preset_test.html
@@ -318,9 +318,13 @@ document.addEventListener('DOMContentLoaded', () => {
 </button>
 
 
+
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+<script>const { jsPDF } = window.jspdf;</script>
+
 
 <script>
 document.getElementById("downloadPresetPDF").addEventListener("click", exportPresetPDF);
