--- a/preset_test.html
+++ b/preset_test.html
@@ -313,9 +313,8 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 
-<button id="downloadPresetPDF" class="bx--btn bx--btn--primary">
-  Download PDF
-</button>
+<button id="downloadPresetPNG" class="bx--btn bx--btn--primary">Download PNG</button>
+
 
 
 
