--- a/preset.html
+++ b/preset.html
@@ -310,5 +310,64 @@ document.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 
+
+
+
+<button id="printPresetBtn" class="bx--btn bx--btn--primary">Stampa Preset</button>
+
+<script>
+function printDivAsPDF(divId) {
+    const div = document.getElementById(divId);
+    if (!div) return alert("Div non trovato");
+
+    // Cattura tutti gli stili <style> e <link rel="stylesheet">
+    const headStyles = Array.from(document.querySelectorAll('style, link[rel="stylesheet"]'))
+        .map(node => node.outerHTML)
+        .join('\n');
+
+    const printWindow = window.open('', '', 'width=1200,height=800');
+
+    printWindow.document.open();
+    printWindow.document.write(`
+      <html>
+        <head>
+          ${headStyles}
+          <style>
+            @media print {
+              @page {
+                size: A3 landscape;
+                margin: 15mm;
+            }
+              body {
+                -webkit-print-color-adjust: exact; /* Chrome/Safari */
+                print-color-adjust: exact; /* Firefox */
+                margin:0; padding:0;
+                zoom: 1; /* no double-size */
+              }
+            }
+          </style>
+        </head>
+        <body>
+          ${div.outerHTML}
+        </body>
+      </html>
+    `);
+    printWindow.document.close();
+
+    printWindow.onload = function() {
+        printWindow.focus();
+        printWindow.print();
+    }
+}
+
+// Attach to button
+document.getElementById('printPresetBtn').addEventListener('click', () => {
+    printDivAsPDF('preset');
+});
+</script>
+
+
+
+
 </body>
 </html>
